# newsletter-server

./: .gitignore  Makefile  main.py  pyproject.toml
src/: main.py
